# platform-client

./: .gitignore  ARCHITECTURE.md  AUTOSTART.md  DEVICE_PAIRING.md  NOTIFICATIONS.md  README.md  RUNBOOK.md  package.json
.cargo/: audit.toml
.github/workflows/: release.yml
protocol/: README.md
scripts/: generate-updater-keys.sh
src/: approvals.ts  index.html  main.js  pairing.ts  queue.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
